--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Builds graph of npm dependencies from npm registry",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test/*.js"
   },
   "keywords": [
     "npm",
@@ -17,5 +17,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/anvaka/npmgraphbuilder"
+  },
+  "devDependencies": {
+    "tap": "~0.4.8",
+    "q": "~1.0.0",
+    "ngraph.graph": "0.0.2"
   }
 }
