--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
-    "npm-package-arg": "^4.2.0"
+    "npm-package-arg": "^4.2.0",
+    "semver": "^5.2.0"
   }
 }
